--- a/src/app/page/agregar-viaje/agregar-viaje.page.html
+++ b/src/app/page/agregar-viaje/agregar-viaje.page.html
@@ -8,12 +8,19 @@
 
   <ion-content>
     <ion-list>
-      <ion-item routerLink="/login">INICIAR SESIÓN</ion-item>
+      <ion-item routerLink="/login">INICIAR SESION</ion-item>
       <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
-      <ion-item routerLink="/recuperar-pass">Recuperar contraseña</ion-item>
+      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+      <ion-item routerLink="/agregar-viaje">AGREGAR VIAJE</ion-item>
+      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
+      <ion-item routerLink="/lista-viajes">VIAJES</ion-item>
+
+
     </ion-list>
   </ion-content>
 </ion-menu>
+
 
 <div class="page-container">
   <ion-header>
