--- a/src/app/page/crear-user/crear-user.page.html
+++ b/src/app/page/crear-user/crear-user.page.html
@@ -12,9 +12,15 @@
       <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
       <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
       <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
-</ion-list>
+      <ion-item routerLink="/agregar-viaje">AGREGAR VIAJE</ion-item>
+      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
+      <ion-item routerLink="/lista-viajes">VIAJES</ion-item>
+
+
+    </ion-list>
   </ion-content>
 </ion-menu>
+
 
 <!-- Encabezado -->
 <ion-header>
