--- a/src/app/page/lista-vehiculos/lista-vehiculos.page.html
+++ b/src/app/page/lista-vehiculos/lista-vehiculos.page.html
@@ -7,33 +7,19 @@
 
   <ion-content>
     <ion-list>
-      <ion-item routerLink="/principal">
-        <ion-icon name="home" slot="start"></ion-icon>
-        INICIO
-      </ion-item>
-      <ion-item routerLink="/login">
-        <ion-icon name="log-in" slot="start"></ion-icon>
-        INICIAR SESION
-      </ion-item>
-      <ion-item routerLink="/crear-user">
-        <ion-icon name="person-add" slot="start"></ion-icon>
-        CREAR CUENTA
-      </ion-item>
-      <ion-item routerLink="/recuperar-pass">
-        <ion-icon name="key" slot="start"></ion-icon>
-        Recuperar contraseña
-      </ion-item>
-      <ion-item routerLink="/agregar-vehiculo">
-        <ion-icon name="car" slot="start"></ion-icon>
-        AGREGAR VEHICULO
-      </ion-item>
-      <ion-item routerLink="/lista-vehiculos">
-        <ion-icon name="list" slot="start"></ion-icon>
-        MIS VEHICULOS
-      </ion-item>
+      <ion-item routerLink="/login">INICIAR SESION</ion-item>
+      <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
+      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+      <ion-item routerLink="/agregar-viaje">AGREGAR VIAJE</ion-item>
+      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
+      <ion-item routerLink="/lista-viajes">VIAJES</ion-item>
+
+
     </ion-list>
   </ion-content>
 </ion-menu>
+
 
 <div class="page-container">
   <ion-header>
