--- a/src/app/page/crear-user/crear-user.page.html
+++ b/src/app/page/crear-user/crear-user.page.html
@@ -1,42 +1,23 @@
-<!-- Menú lateral -->
-<ion-menu content-id="main-content">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>TeLlevoApp</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <ion-item routerLink="/login">INICIAR SESION</ion-item>
-      <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
-      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
-      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
-      <ion-item routerLink="/agregar-viaje">AGREGAR VIAJE</ion-item>
-      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
-      <ion-item routerLink="/lista-viajes">VIAJES</ion-item>
-
-
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
-
-<!-- Encabezado -->
-<ion-header>
-  <ion-toolbar>
+<ion-header [translucent]="true" class="ion-no-border">
+  <ion-toolbar color="primary" class="ion-text-center">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-
-    <!-- Logo de la aplicación -->
-    <img src="/assets/img/duoc.png" class="responsive-image" alt="Logo Duoc"/>
-
-    <ion-buttons slot="end">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    <ion-title>
+      <div class="carousel">
+        <span>
+          <img src="assets/img/TIPO.png" alt="TIPO" class="header-logo">
+        </span>
+      </div>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
+
+
+  
+
+
+
 
 <!-- Contenido -->
 <ion-content id="main-content" class="ion-padding">
@@ -77,38 +58,10 @@
   </form>
 </ion-content>
 
-<!-- Pie de página -->
-<ion-footer>
-  <ion-toolbar>
-    <ion-title class="ion-text-center">Desarrollado por Jon.Roa</ion-title>
+<ion-footer class="ion-no-border">
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center">
+      JonatanRoa
+    </ion-title>
   </ion-toolbar>
 </ion-footer>
-
-<style>
-  .responsive-image {
-    max-width: 150px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
-  }
-
-  ion-content {
-    --padding-top: 20px;
-    --padding-bottom: 20px;
-  }
-
-  form {
-    max-width: 500px;
-    margin: 0 auto;
-  }
-
-  ion-item {
-    margin-bottom: 16px;
-  }
-
-  h1 {
-    margin-bottom: 24px;
-    color: var(--ion-color-primary);
-  }
-</style>
