--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -88,7 +88,7 @@
               <ion-card-content>
                 <ion-icon name="people-outline" color="secondary" class="custom-icon"></ion-icon>
                 <ion-text>
-                  <h2>Lista de Usuarios</h2>
+                  <h2>Perfil</h2>
                 </ion-text>
               </ion-card-content>
             </ion-card>
