--- a/src/app/page/principal/principal.page.html
+++ b/src/app/page/principal/principal.page.html
@@ -76,7 +76,7 @@
               <ion-card-content>
                 <ion-icon name="compass-outline" color="warning" class="custom-icon"></ion-icon>
                 <ion-text>
-                  <h2>Viajes disponibles </h2>
+                  <h2>Viajes Registrados</h2>
                 </ion-text>
               </ion-card-content>
             </ion-card>
