--- a/src/app/page/agregar-viaje/agregar-viaje.page.html
+++ b/src/app/page/agregar-viaje/agregar-viaje.page.html
@@ -1,28 +1,42 @@
 
-<ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar color="primary" class="ion-text-center">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    
-    <ion-title>
-      <div class="carousel">
-        <span>
-          <img src="assets/img/TIPO.png" alt="TIPO" class="header-logo">
-          
-        </span>
-      </div>
-    </ion-title>
+<ion-menu content-id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>TeLlevoApp</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-    <ion-buttons slot="end">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item routerLink="/login">INICIAR SESION</ion-item>
+      <ion-item routerLink="/crear-user">CREAR CUENTA</ion-item>
+      <ion-item routerLink="/recuperar-pass">RECUPERAR CONTRASEÑA</ion-item>
+      <ion-item routerLink="/agregar-vehiculo">AGREGAR VEHICULO</ion-item>
+      <ion-item routerLink="/agregar-viaje">AGREGAR VIAJE</ion-item>
+      <ion-item routerLink="/lista-vehiculos">VEHICULOS</ion-item>
+      <ion-item routerLink="/lista-viajes">VIAJES</ion-item>
+
+
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
 
 <div class="page-container">
-  
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="/principal"></ion-back-button>
+      </ion-buttons>
+
+      <img src="/assets/img/duoc.png" class="responsive-image" alt="Logo Duoc"/>
+
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-content id="main-content" class="ion-padding">
     <div class="content-container">
       <h1 class="ion-text-center">Agregar Viaje</h1>
